--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+// Regular screens
+@media (max-width: 2000px) {
+  html * {
+    font-size: 1rem;
+  }
+}
+
+// High res support
+@media (min-width: 2000px) {
+  html * {
+    font-size: 2rem;
+  }
+}
+
+html * {
+  padding: 0;
+  margin: 0;
+  font-family: "Lucida Sans";
+  color: white;
+}
